--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,14 @@ plugins {
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 29
-
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.example.jeogeum"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -28,13 +26,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-
 dependencies {
-
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
@@ -50,5 +46,7 @@ dependencies {
        // 디비
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-firestore:22.0.1'
-    // 나중에 버전 관리용 platform ( bom ) 추가
+    // layout
+    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
