--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Jeogeum">
+        android:theme="@style/AppTheme">
+        <activity android:name=".ShowMyText"></activity>
+        <activity android:name=".ContentActivity" />
+        <activity android:name=".MainActivity"/>
         <activity android:name=".SignupActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
@@ -19,7 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
