--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".Showtext" />
         <activity android:name=".Main_WriteContent"  android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".SignupActivity" />
+        <activity android:name=".MyWritingActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login">
