--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".Main_WriteContent"  android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".SignupActivity" />
         <activity android:name=".MyWritingActivity" />
+        <activity android:name=".SearchText"/>
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login">
