--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Fragment3"></activity>
         <activity android:name=".StartActivity" />
-        <activity android:name=".Set_Practice" />
-        <activity android:name=".Practice" />
         <activity android:name=".PreSettingsActivity" />
-        <activity android:name=".SettingActivity" />
         <activity android:name=".Showtext" />
         <activity
             android:name=".Main_WriteContent"
@@ -22,6 +18,8 @@
         <activity android:name=".SignupActivity" />
         <activity android:name=".MyWritingActivity" />
         <activity android:name=".YourWritingActivity" />
+        <activity android:name=".MyDetailActivity" />
+        <activity android:name=".YourDetailActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
