--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:22.1.0'
 
     implementation 'me.relex:circleindicator:1.2.2'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
     // 나중에 버전 관리용 platform ( bom ) 추가
 }
